[package]
name = "tg_unblock"
version = "0.3.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
aes = "0.8"
ctr = "0.9"
cipher = "0.4"
ctrlc = "3.2"
native-tls = "0.2"
eframe = "0.33.3"
open = "5.3.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[[bin]]
name = "tg_unblock"
path = "src/main.rs"
