[package]
name = "tg_unblock"
version = "0.3.1"
edition = "2021"

[dependencies]
eframe = "0.19.0"
egui = "0.19.0"
wgpu = "0.15.0"
tokio = { version = "1.0", features = ["full"] }
#reqwest = { version = "0.9", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open = "1.7.0"
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
native-tls = "=0.2.11"
futures-util = "0.3"
aes = "0.8"
ctr = "0.9"
cipher = "0.4"
home = "=0.5.9"
url = "=2.3.1"
idna = "=0.3.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[[bin]]
name = "tg_unblock"
path = "src/main.rs"
